# agent-oriented-architecture

./: .gitignore  README.md  pyproject.toml
disrupt_arch/: __main__.py  models.py
disrupt_arch/agents/: __init__.py  communication.py  escalation.py  installment.py  registry.py  risk.py  task.py
disrupt_arch/agents/base/: __init__.py  agent.py  cognitive.py  operational.py
disrupt_arch/config/: __init__.py  chroma.py  openai.py  settings.py
disrupt_arch/knowledge/: __init__.py  base.py  seed.py
disrupt_arch/message/: __init__.py  broker.py
disrupt_arch/tests/: samples.py
disrupt_arch/tests/integration/: test_concurrent_workflows.py  test_escalation.py  test_escalation_workflow.py  test_installment_plan.py  test_risk_assessment.py
disrupt_arch/tests/metrics/: test_system_metrics.py
disrupt_arch/tests/metrics/results/: test_results.csv
disrupt_arch/tests/unit/: test_agent_base.py  test_agent_concurrency.py  test_task_agent.py
