[tool.poetry]
name = "disrupt-arch"
version = "0.1.0"
description = ""
authors = ["Jens Erhart <s85393@bht-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.59.6"
python-dotenv = "^1.0.1"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
chromadb = "^0.6.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[tool.ruff]
lint.extend-select =  ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
